0.0.2
-----
1. Add version string.

0.0.1
-----
1. Initial release.