@@ -1,6 +1,7 @@
 0.0.2
 -----
 1. Add version string.
+2. Place ZIP contents into musly-server folder.
 
 0.0.1
 -----
